Build bootstrap from sass, so we can override the vars.

--- a/spa-react-netcore-redis/voting/voting/ClientApp/src/styles/_navbar.scss
+++ b/spa-react-netcore-redis/voting/voting/ClientApp/src/styles/_navbar.scss
@@ -1,4 +1,4 @@
-﻿.navbar li .glyphicon {
+.navbar li .glyphicon {
     margin-right: 10px;
 }
 
@@ -55,4 +55,12 @@
         overflow: hidden;
         text-overflow: ellipsis;
     }
+}
+
+.navbar .container-fluid .navbar-brand {
+    padding: 10px 15px;
+}
+
+.container-fluid>.navbar-header {
+    background-color: #353637;
 }
